[metadata]
name = symbols
version = 0.6.0
author = Matheus Tura
license = GPL-3.0
description = A library for cryptocurrency ticker symbols manipulation
url = https://github.com/zatura/symbols
long_description = "Get the advantage of IDE hints for every symbol, don't worry about repeatedly consulting exchange/symbol-specific information. You can have all information in itself as an accessible object."


long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    License :: OSI Approved :: GNU Library or Lesser General Public License (LGPL)
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython
    Operating System :: POSIX
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Topic :: Software Development :: Libraries

[options]
packages = find:
setup_requires =
    # Setup dependencies
    wheel

python_requires = >=3.6
